llvm/src/snapshots/transmute_llvm__tests__mul.snap
---
source: llvm/src/lib.rs
expression: res
---
; ModuleID = 'main'
source_filename = "main"

declare void @print(i64)

define i64 @f(i64 %"l#sym19#", i64 %"r#sym20#") {
entry:
  %"mul#" = mul i64 %"l#sym19#", %"r#sym20#"
  ret i64 %"mul#"
}
