llvm/src/snapshots/transmute_llvm__tests__mul_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

declare void @print(i64)

declare ptr @malloc(i64)

define i64 @f(i64 %"l#param#sym19#", i64 %"r#param#sym20#") {
entry:
  %"mul#" = mul i64 %"r#param#sym20#", %"l#param#sym19#"
  ret i64 %"mul#"
}
