llvm/src/snapshots/transmute_llvm__tests__ne_boolean_boolean.snap
---
source: llvm/src/lib.rs
expression: res
---
; ModuleID = 'main'
source_filename = "main"

declare void @print(i64)

define i1 @f(i1 %"l#sym19#", i1 %"r#sym20#") {
entry:
  %"r#local#sym20#" = alloca i1, align 1
  store i1 %"r#sym20#", ptr %"r#local#sym20#", align 1
  %"l#local#sym19#" = alloca i1, align 1
  store i1 %"l#sym19#", ptr %"l#local#sym19#", align 1
  %"l#local#sym19#1" = load i1, ptr %"l#local#sym19#", align 1
  %"r#local#sym20#2" = load i1, ptr %"r#local#sym20#", align 1
  %"ne#" = icmp ne i1 %"l#local#sym19#1", %"r#local#sym20#2"
  ret i1 %"ne#"
}
